<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/preference_category_connection">

        <SwitchPreference
            app:key="run"
            app:title="@string/preference_title_run"
            app:summary="@string/preference_summary_run"
            />

        <EditTextPreference
            app:defaultValue="127.0.0.1"
            app:key="host"
            app:title="@string/preference_title_host"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="5123"
            app:key="port"
            app:title="@string/preference_title_port"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/preference_category_support">

        <Preference
            app:summary="@string/preference_summary_github"
            app:title="@string/preference_title_github">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/wirekang/apk-quick-install" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>